--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         font-family: Arial, sans-serif;
         background: #f5f5f5;
         margin: 0;
-        padding: 20px;
+        padding: 80px 20px 20px;
         text-align: center;
+        align-items: center;
       }
 
       h1 {
@@ -35,18 +36,18 @@
       }
 
       .form-group {
-        margin: 15px 0;
-      }
-
-      label {
-        font-size: 14px;
-        margin-right: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        margin-top: 10px;
       }
 
       input[type="color"] {
         border: none;
-        width: 50px;
-        height: 30px;
+        width: 40px;
+        height: 25px;
+        padding: 0;
         cursor: pointer;
       }
 
